hard-gists/6581415/run.log
=== Docker Run Log for 6581415 ===
Started at: Mi 29. Okt 16:37:55 CET 2025

[2025-10-29 16:37:56] START: Running container for 6581415
[2025-10-29 16:37:56] SUCCESS: Container afbad9aea13fec7f7cf5b7f2c26fde309eace79ade11fdc3c7efbc25a4c6e61e started for 6581415
=== Container logs for 6581415 ===
  File "/snippet.py", line 109
    print "on_load_finished returning early for testing purposes"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6581415 ===
[2025-10-29 16:37:58] INFO: Container afbad9aea13fec7f7cf5b7f2c26fde309eace79ade11fdc3c7efbc25a4c6e61e has stopped
